# SIQ025-SIQ525

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/sessions/: sesion_1.doctree  sesion_2.doctree  sesion_3.doctree  sesion_4.doctree  session_1.doctree  session_2.doctree  session_3.doctree  session_4.doctree  session_5.doctree  session_6.doctree  session_7.doctree  session_8.doctree  session_9.doctree
.github/workflows/: deploy_docs.yml
_sources/: index.md.txt
_sources/sessions/: sesion_1.md.txt  session_3.md.txt  session_6.md.txt  session_8.md.txt
docs/: conf.py  index.md
docs/sessions/: sesion_2.md  sesion_4.md  session_1.md  session_2.md  session_3.md  session_4.md  session_5.md  session_7.md  session_9.md
sessions/: sesion_1.html  sesion_2.html  sesion_3.html  sesion_4.html  session_1.html  session_2.html  session_3.html  session_4.html  session_5.html  session_6.html  session_7.html  session_8.html  session_9.html
