[project]
name = "siq025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"pandas>=2.0",
	"numpy>=1.25",
	"seaborn>=0.12",
	"matplotlib>=3.7",
	"scikit-learn>=1.3",
	"plotly>=5.15",
	"uvicorn>=0.22",
	"sphinx>=7.2",
	"myst-parser>=0.19",
	"sphinx-rtd-theme>=1.3",
	"sphinx-autobuild>=2024.1",
]
